# BenchmarksForSIMDMerge

SpMMBenchmarks/: .gitignore  .gitmodules  CMakeLists.txt  fixGem5Bug.hpp  old.gitmodules  test.cpp  testEigen.cpp
SpMMBenchmarks/Benchmarking/: CMakeLists.txt  benchmarking.cpp  statisticTool.hpp
SpMMBenchmarks/CheckCSREqual/: CMakeLists.txt  CheckCSREqual.cpp
SpMMBenchmarks/DriverByJson/: CMakeLists.txt  DriverByJson.cpp  DriverByJson.hpp  descStruct.hpp  safeIO.cpp  safeIO.hpp
SpMMBenchmarks/ExternalBenchYusukeNagasaka/: CMakeLists.txt  YusukeNagasaka.cpp  YusukeNagasaka.hpp
SpMMBenchmarks/ExternalBenchYusukeNagasaka/include/YusukeNagasaka/: BIN.h  CSC.h  CSR.h  HeapEntry.h  Triple.h  hash_mult.h  heap_mult.h  utility.h
SpMMBenchmarks/ExternalEigen/: CMakeLists.txt  ExternEigen.hpp
SpMMBenchmarks/Gem5MagicInst/: CMakeLists.txt
SpMMBenchmarks/Gem5MagicInst/src/empty/: m5opsEmpty.c
SpMMBenchmarks/Harness/: CMakeLists.txt  exampleOutput.json  harness.cpp  harness.hpp
SpMMBenchmarks/RandomGenerator/: CMakeLists.txt  randomGenerator.cpp
SpMMBenchmarks/SpSpInterface/: CMakeLists.txt
SpMMBenchmarks/SpSpInterface/include/SpSpInterface/: SpSpInterface.hpp
SpMMBenchmarks/SparseMMHeapAccum/: CMakeLists.txt  SparseMMHeapAccum.cpp  SparseMMHeapAccum.hpp  heapReplace.hpp
SpMMBenchmarks/SparseMMTimOptimize/: CMakeLists.txt  TagType.hpp  dummy.cpp  measureMerge.hpp  mergePercentage.md  rowStack.hpp  scalarSparseAdd.hpp  simdSparseAdd.hpp  sparseGemm.hpp
SpMMBenchmarks/SparseMMTimSortAlike/: CMakeLists.txt  CheckIfSparsePatternCorrect.hpp  DirectSparseVectorAdd.cpp  InstBasedSparseVectorAdd.cpp  SparseMMTimSortAlike.hpp  SparseRowStack.hpp  VectorUtils.hpp  dummy.cpp  timmingDebug.cpp  timmingDebug.hpp
SpMMBenchmarks/SparseMMVecAccum/: CMakeLists.txt  SpMMVecAccum.cpp  SpMMVecAccum.hpp
SpMMBenchmarks/SparseMatTool/: CMakeLists.txt  format.cpp  format.hpp  serialization.cpp  serialization.hpp  specialAllocator.hpp  specialAllocator.md
SpMMBenchmarks/SparseOldTranspose/: CMakeLists.txt  SparseOldTranspose.cpp  SparseOldTranspose.hpp
SpMMBenchmarks/Workflow/: adjust.py  big.py  gem5ArmRunner.py  gem5Exec.py  justone.py  middle.py  middleExpand.py  middleNew.py  oneKNew.py  onek.py  simpleWorkflow.py  small.py  supportedWorkloads.py  systemCommon.py  twoMatWorkflow.py  workflow.py
SpMMBenchmarks/eigen/: .gitignore
SpMMBenchmarks/spspinterfacev2/include/SpSpInst/: PredefPolicy.hpp
SpMMBenchmarks/spspinterfacev2/include/SpSpInst/realInst/: UserInterface.hpp
SpMMBenchmarks/spspinterfacev2/include/SpSpInst/simInst/: UnserInterface.hpp
basicProblemExplore/: .gitignore  .gitmodules  CMakeLists.txt  drawFigure.py  gem5ArmRunner.py  generateVectors.py
basicProblemExplore/ComplexJoin/: complexJoin.cpp  complexJoin.md  complexJoin_cmpOld.md  joinTemplate.hpp  old.hpp  oldSIMD.hpp  randSparseTensor.py  sparseTensor.hpp
basicProblemExplore/Gem5MagicInst/src/: note.md
basicProblemExplore/JoinOp/: JoinOp.cpp  JoinOp.md  generateKV.py  sequential.hpp  simdJoin.hpp
basicProblemExplore/SetOperation/: Sequential.hpp  SetOperation.cpp  SetOperation.md  SetOperationOld.md  Simd.hpp  generateMerge.py
basicProblemExplore/SimpleBenchmarking/: BenchMarking.hpp
basicProblemExplore/Sort/: CheckUtils.hpp  OldSort.md  Sort.cpp  SortAlg.hpp  SortAlgKV.hpp  SortAlgUtils.hpp  SortKV.cpp  SortKV_10k.md  Sort_10k.md
basicProblemExplore/Sort/bramas/: .gitlab-ci.yml  CMakeLists.txt  README.md  build-script.sh  jobs.sh  sortSVE.hpp  sortSVE512.hpp  sortSVEkv.hpp  sortSVEkv512.hpp  sortSVEperf.cpp  sortSVEtest.cpp  testMain.cpp
basicProblemExplore/Sort/bramas/boostparallel/: boostparallel.cpp  build_script.sh
basicProblemExplore/SpSpInterface/: CMakeLists.txt
basicProblemExplore/SpSpInterface/include/SpSpInterface/: SpSpEnums.hpp
basicProblemExplore/SpSpInterface/include/SpSpInterface/FakeSVE/: FakeImplInternal.hpp  FakeSpSpInstUserHeader.hpp
basicProblemExplore/SpSpInterface/include/SpSpInterface/SVE/: SpSpInstUserHeader.hpp
basicProblemExplore/SpSpInterfaceV2/: CMakeLists.txt
basicProblemExplore/SpSpInterfaceV2/include/SpSpInst/realInst/: UserInterface.hpp
basicProblemExplore/SpSpInterfaceV2/include/SpSpInst/simInst/: UnserInterface.hpp
